# llm-mcts

./: .gitignore  README.md  baseline.py  baseline_countdown.py  baseline_gsm8k.py  best_of_n.py  chat.py  config.py  countdown_dataset.py  data.py  eval.py  generate_py_proto.sh  gpu_runner.py  graders.py  inference.py  inference_pb2.py  inference_pb2_grpc.py  init_eval.py  main.py  manifest.yaml  mcts.py  model.py  orchestrate.sh  prepare.sh  pyproject.toml  redis.sh  reset.sh  run_best_n.sh  run_inference.sh  testfa2.py  train.py  weight_subscriber.py
configs/: config.json
envs/cd/: Cargo.toml  dataset.json  dataset_test.json
envs/cd/src/: main.rs
mcts-rust/: Cargo.toml  build.rs
mcts-rust/.cargo/: config.toml
mcts-rust/proto/: inference.proto
mcts-rust/src/: config.rs  gpu_runner.rs  grpc.rs  lib.rs  logger.rs  main.rs  mcts.rs  mod.rs
ui/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/server/: index.ts  tokenizer.ts  tree-store.ts  types.ts
ui/src/: App.tsx  api.ts  layout.ts  styles.css  types.ts
