[package]
name = "mcts-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
dashmap = "6"
anyhow = "1.0.100"
tch = "0.22.0"
tonic = "0.14.2"
tonic-prost = "0.14.2"
prost = "0.14.3"
tokio = { version = "1.49.0", features = ["full"] }
futures = "0.3.31"
rand = "0.9.2"
redis = { version = "1.0.2", features = ["tokio-comp", "connection-manager"] }
serde_json = "1.0.149"
serde = "1.0.228"


[build-dependencies]
tonic-prost-build = "0.14.2"
